[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>", "Jeremy Knope <me@jeremyknope.com"]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
rayon = "1.8.0"

[profile.release]
debug = true
